# SDL_shader_tools

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  SDL_shader_ast.c  SDL_shader_ast.h  SDL_shader_bytecode.h  SDL_shader_common.c  SDL_shader_compiler.c  SDL_shader_compiler.h  SDL_shader_internal.h  SDL_shader_lexer.c  SDL_shader_lexer.re  SDL_shader_parser.h  SDL_shader_parser.lemon  SDL_shader_preprocessor.c
.github/: FUNDING.yml
.github/workflows/: main.yml
cmake/: Findre2c.cmake
docs/: README-SDL_gpu.md  README-bytecode-format.md  README-shader-language-quickstart.md
lemon/: CMakeLists.txt  lemon.c  lempar.c
unit_tests/: run_tests.pl
unit_tests/preprocessor/errors/: division-zero  division-zero.correct  failing-short-circuit-and  failing-short-circuit-and.correct  failing-short-circuit-or  failing-short-circuit-or.correct  forbid-absolute-include  forbid-absolute-include.correct  forbid-dotdot-include  forbid-dotdot-include.correct  forbid-windows-dirsep-include  forbid-windows-dirsep-include.correct  macro-with-comma-after-params  macro-with-comma-after-params.correct  missing-include  missing-include.correct  modulo-zero  modulo-zero.correct  recover-from-bad-elif-expression  recover-from-bad-elif-expression.correct  recover-from-bad-if-expression  recover-from-bad-if-expression.correct  redefinition-file.correct  redefinition-line.correct  redefinition.correct  too-many-macro-args.correct  undef-file-twice.correct  undef-file.correct  undef-line-twice.correct  undef-line.correct  unknown-directive  unknown-directive.correct
unit_tests/preprocessor/output/: another-from-current-dir  another-from-current-dir.correct  comment-after-preprocessor-directives  comment-after-preprocessor-directives.correct  comment-before-preprocessor-directive  comment-before-preprocessor-directive.correct  concat-operator-two-macros-with-args  concat-operator-two-macros-with-args.correct  expression-depth  expression-depth.correct  float-half-suffix.correct  if-with-embedded-parens  include-file-from-same-directory  include-file-from-same-directory.correct  include-file-from-subdir-that-includes-from-current-directory  include-file-from-subdir-that-includes-from-current-directory.correct  just-a-comment  line-macro.correct  macro-1-arg-accepts-void.correct  multiline-comment-no-whitespace-between-tokens  multiline-comment-no-whitespace-between-tokens.correct  multiline-concat  multiline-spaces  multiline-spaces.correct  recursive-macros  recursive-macros-multiple  recursive-macros-multiple-with-args  recursive-macros-multiple-with-args.correct  recursive-macros-multiple.correct  recursive-macros-with-args  recursive-macros-with-args.correct  self-referencing-macro  self-referencing-macro-with-args  self-referencing-macro-with-args.correct  self-referencing-macro.correct  short-circuit-and  short-circuit-or
unit_tests/preprocessor/output/subdir/: include-another-from-current-dir
utils/: sdl-shader-bytecode-dumper.c  sdl-shader-compiler.c
